--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "lint": "eslint .",
+  "postinstall": "chmod +x node_modules/.bin/vite"
+}
+,
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@supabase/supabase-js": "^2.78.0",
@@ -29,13 +31,16 @@
     "vite": "^7.1.2",       
     "@vitejs/plugin-react": "^5.0.0" 
   },
-  "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "eslint": "^9.33.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0"
-  }
+ "devDependencies": {
+  "vite": "^7.1.2",
+  "@vitejs/plugin-react": "^5.0.0",
+  "@eslint/js": "^9.33.0",
+  "@types/react": "^19.1.10",
+  "@types/react-dom": "^19.1.7",
+  "eslint": "^9.33.0",
+  "eslint-plugin-react-hooks": "^5.2.0",
+  "eslint-plugin-react-refresh": "^0.4.20",
+  "globals": "^16.3.0"
+}
+
 }
