--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "dev": "vite",
   "build": "vite build",
   "preview": "vite preview",
-  "lint": "eslint .",
-  "postinstall": "chmod +x node_modules/.bin/vite"
+  "lint": "eslint ."
+  
 }
 ,
   "dependencies": {
